--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/yelpRecommender.js"></script>
         <title>Random Restaurant</title>
-        <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
+        <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     </head>
 
     <body>
