--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
             <div class="jumbotron">
                 <h3 class="text-center">Search Any Restaurant in Yelp by Zipcode</h3>
                 <form id="searchForm">
-                    <input class="form-control" type="tel" pattern="[0-9]{5}" id="zipcode" placeholder="Five digit zip code">
+                    <input class="form-control" type="text" pattern="[0-9]{5}" id="zipcode" placeholder="Five digit zip code">
                 </form>
             </div>
         </div>
