--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,9 +23,12 @@
         <div class="container">
             <div class="jumbotron">
                 <h3 class="text-center">Search Any Restaurant in Yelp by Zipcode</h3>
-                <form id="searchForm">
-                    <input class="form-control" type="text" pattern="[0-9]{5}" id="zipcode" placeholder="Five digit zip code">
-                </form>
+                <div>
+                    <form id="searchForm">
+                        <input class="form-control" type="text" pattern="[0-9]{5}" id="zipcode" placeholder="Five digit zip code" />
+                    </form>
+                    <button class="form-control btn btn-info" type="submit" value="Submit" name="submit" id="submit">Search</button>
+                </div>
             </div>
         </div>
 
