--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,8 @@
                 <div>
                     <form id="searchForm">
                         <input class="form-control" type="text" pattern="[0-9]{5}" id="zipcode" placeholder="Five digit zip code" />
+                        <input class="form-control btn btn-info" type="submit" value="Search" name="submit" id="submit" />
                     </form>
-                    <button class="form-control btn btn-info" type="submit" value="Submit" name="submit" id="submit">Search</button>
                 </div>
             </div>
         </div>
